--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/estree": "^1.0.8",
+    "@types/history": "^4.7.11",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^20.19.22",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
